eclipse code cleanup